--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ argh==0.26.2
 asgiref==3.4.1
 baton==1.0.1
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.6
+cryptography==3.4.8
+defusedxml==0.7.1
 Django==3.2.7
+django-allauth==0.45.0
 django-baton==2.2.3
 djangorestframework==3.12.4
 djangorestframework-jsonapi==4.2.1
@@ -12,11 +16,16 @@ hgicommon==1.2.0
 hgijson==1.3.1
 idna==3.2
 inflection==0.5.1
+oauthlib==3.1.1
 pathtools==0.1.2
+pycparser==2.20
+PyJWT==2.1.0
 python-dateutil==2.5.3
+python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
+requests-oauthlib==1.3.0
 six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
