--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ hgicommon==1.2.0
 hgijson==1.3.1
 idna==3.2
 inflection==0.5.1
+mysqlclient==2.0.3
 oauthlib==3.1.1
 pathtools==0.1.2
 pycparser==2.20
