--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,12 @@ hgicommon==1.2.0
 hgijson==1.3.1
 idna==3.2
 inflection==0.5.1
+mysqlclient==2.0.3
 oauthlib==3.1.1
 pathtools==0.1.2
 pycparser==2.20
 PyJWT==2.1.0
+PyMySQL==1.0.2
 python-dateutil==2.5.3
 python3-openid==3.2.0
 pytz==2021.1
@@ -31,4 +33,3 @@ sqlparse==0.4.2
 urllib3==1.26.7
 watchdog==0.8.3
 websocket-client==1.2.1
-mysqlclient==2.0.3
