--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -7,3 +7,6 @@ packages:
     mysql: []
     git: []
     gcc: []
+    libmysqlclient-devel: []
+    default-libmysqlclient-devel : []
+    libmysqlclient-devel: []
