--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -2,7 +2,7 @@ packages:
   yum:
     MySQL-python: []
     python-devel: []
-    mysql-devel: []
+    mariadb-devel: []
     mysql: []
     libmysqlclient-devel: []
     default-libmysqlclient-devel : []
