--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,8 +1,4 @@
-packages:
+packages: 
   yum:
-    MySQL-python: []
-    python-devel: []
-    mariadb-devel: []
-    mysql: []
-    libmysqlclient-devel: []
-    default-libmysqlclient-devel : []
+    python3-devel: []
+    mysql-devel: []
