--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,3 +1,8 @@
 option_settings:
+"aws:elasticbeanstalk:application:environment":
+     DJANGO_SETTING_MODULE: "ecs_site.settings"
+     PYTHONPATH: "/opt/python/current/app/ecs_site:$PYTHONPATH"
+ "aws:elasticbeanstalk:container:python":
+     WSGIPath: "ecs_site/ecs_site/wsgi.py"    
   aws:elasticbeanstalk:container:python:
     WSGIPath: billim.wsgi:application
