--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -2,4 +2,4 @@ option_settings:
   "aws:elasticbeanstalk:container:python":
     WSGIPath: billim.wsgi:application
   "aws:elasticbeanstalk:container:python:staticfiles":
-    static: "static/"
+    /static: static
