--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,5 +1,5 @@
 option_settings:
   "aws:elasticbeanstalk:container:python":
     WSGIPath: billim.wsgi:application
-  "aws:elasticbeanstalk:container:python:staticfiles":
+  "aws:elasticbeanstalk:environment:proxy:staticfiles":
     /static: static
