--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
 cryptography==3.4.8
+curlify==2.2.1
 DateTime==4.3
 defusedxml==0.7.1
 Django==3.2.7
