--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 argh==0.26.2
 asgiref==3.4.1
+auth==0.5.3
 baton==1.0.1
+blinker==1.4
 boto3==1.18.53
 botocore==1.21.53
 certifi==2021.5.30
@@ -16,19 +18,26 @@ django-baton==2.2.3
 django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-jsonapi==4.2.1
+dnspython==2.1.0
 docker-py==1.9.0
+eventlet==0.32.0
+falcon==3.0.1
 future==0.18.2
+greenlet==1.1.2
+gunicorn==20.1.0
 hgicommon==1.2.0
 hgijson==1.3.1
 idna==3.2
 inflection==0.5.1
 jmespath==0.10.0
+mongoengine==0.23.1
 mysqlclient==2.0.3
 oauthlib==3.1.1
 pathtools==0.1.2
 Pillow==8.3.2
 pycparser==2.20
 PyJWT==2.1.0
+pymongo==3.12.0
 PyMySQL==1.0.2
 python-dateutil==2.5.3
 python3-openid==3.2.0
@@ -43,4 +52,5 @@ sqlparse==0.4.2
 urllib3==1.26.7
 watchdog==0.8.3
 websocket-client==1.2.1
+Werkzeug==2.0.2
 zope.interface==5.4.0
