--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ DateTime==4.3
 defusedxml==0.7.1
 Django==3.2.7
 django-allauth==0.45.0
+django-autocomplete-light==3.8.2
 django-baton==2.2.3
 django-storages==1.11.1
 djangorestframework==3.12.4
